--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/react-slick": "^0.23.10"
   }
 }
